[tool.poetry]
name = "tokelor"
version = "0.1.0"
description = "Visualize Python token stream produced by tokenize module."
authors = ["Kirill Borisov <lensvol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
tokelor = 'tokelor.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
