[tool.poetry]
name = "tokelor"
version = "0.1.3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lensvol/tokelor"
keywords = ["tokenize", "tokens"]
description = "Visualize Python token stream produced by tokenize module."
authors = ["Kirill Borisov <lensvol@gmail.com>"]
include = [
    "LICENSE",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
colorama = "=0.3.9"

[tool.poetry.scripts]
tokelor = 'tokelor.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
